@@ -12,15 +12,13 @@ Plans for 0.3.3
       [D] Allow selecting arbitrary video file
       [D] New toolbar for video
       [D] New window for video player output
-      [D] Built-in commands for more than one video player
+      [D] Pre-configured commands for more than one video player
 
     Bug Fixes:
       [D] File marked unchanged after saving a copy of it
       [D] Overwrite dialog not always presented when saving
       [D] Open button on the main toolbar missing tooltip
       [D] Open dialog not always defaulting to directory of last opened file
-
-    VLC!
 
 
 Plans for 0.4.0
